src/bin/rsp/tui/widgets/snapshots/rsp__tui__widgets__game_log__tests__render_game_log.snap
---
source: src/bin/rsp/tui/widgets/game_log.rs
assertion_line: 149
expression: terminal.backend()
snapshot_kind: text
---
"╭ ♥ Recent Games ──────────────────────────────────────────────────────────────╮"
"│ #       Winner          Win(bb)  Loser           Loss(bb) Pot(bb)  Street    │"
"│                                                                              │"
"│ 1       Alice           +1.5     Bob             -1.5     1.5      river     │"
"│ 2       Bob             +0.5     Alice           -0.5     0.5      flop      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
