src/bin/rsp/tui/widgets/snapshots/rsp__tui__widgets__game_log__tests__render_game_log_empty.snap
---
source: src/bin/rsp/tui/widgets/game_log.rs
assertion_line: 162
expression: terminal.backend()
snapshot_kind: text
---
"╭ ♥ Recent Games ──────────────────────────────────────────────────────────────╮"
"│ #       Winner          Win(bb)  Loser           Loss(bb) Pot(bb)  Street    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
